log/build_2026-07-17_10-25-01/auto_suture/stderr.log
  File "/home/jazmin/auto_suture/install/auto_suture/lib/python3.12/site-packages/auto_suture/tool_grasp_pose_node.py", line 40
    self.baselink_state_callback
    ^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

